src/test/deca/context/valid/valid-rightTypeExpression.deca
// Description:
//    Déclaration de variables
//
// Résultats:
//    Pass
//
// Historique:
//    Créé le 10/01/2024

{
   int b = 3;
   float a = b;
}
